force-app/main/default/objects/Animal_Relationship__c/Animal_Relationship__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Object for defining a relationship between animals and storing related details specific to that relationship.</description>
    <label>Animal Relationship</label>
    <nameField>
        <displayFormat>REL{00000}</displayFormat>
        <label>Animal Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>