force-app/main/default/objects/Animal_Relationship__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Animal Shelter] Indicates whether this relationship is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>