force-app/main/default/objects/Animal_Relationship__c/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <formula>Animal__r.Animal_Name__c</formula>
    <label>Animal Name</label>
    <type>Text</type>
</CustomField>