force-app/main/default/objects/Animal_Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>[Animal Shelter] The end date of the relationship</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>