force-app/main/default/objects/Animal_Relationship__c/fields/Internal_User__c.field-meta.xml
<CustomField>
    <fullName>Internal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Animal_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>