force-app/main/default/objects/Animal_Relationship__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Contact__c )), Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName,

    IF(
        NOT(ISBLANK( Organisation__c )),  Organisation__r.Name, &quot; &quot; 
      )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>