force-app/main/default/objects/Animal_Relationship__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Animal Relationships</relationshipLabel>
    <relationshipName>Animal_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>