force-app/main/default/objects/Animal_Relationship__c/fields/Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Created</label>
    <type>Checkbox</type>
</CustomField>