force-app/main/default/objects/Animal_Relationship__c/fields/Related_Animal__c.field-meta.xml
<CustomField>
    <fullName>Related_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Animal Relationships (Related Animal)</relationshipLabel>
    <relationshipName>Animal_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>