force-app/main/default/objects/Animal_Relationship__c/fields/Related_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Animal_Name__c</fullName>
    <formula>%%%NAMESPACED_ORG%%%Related_Animal__r.%%%NAMESPACED_ORG%%%Animal_Name__c</formula>
    <label>Related Animal Name</label>
    <type>Text</type>
</CustomField>