force-app/main/default/objects/Animal_Relationship__c/fields/Relationship_Types__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Types__c</fullName>
    <label>Relationship Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Contact_Relationships</valueSetName>
    </valueSet>
</CustomField>