force-app/main/default/objects/Animal_Relationship__c/recordTypes/Animal_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Animal_Relationship</fullName>
    <active>true</active>
    <description>Relationships between Animals</description>
    <label>Animal Relationship</label>
</RecordType>