force-app/main/default/objects/Animal_Relationship__c/recordTypes/Contact_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Contact_Relationship</fullName>
    <active>true</active>
    <description>Relationships between Contacts and Animals</description>
    <label>Contact Relationship</label>
</RecordType>