force-app/main/default/objects/Animal_Relationship__c/recordTypes/Human_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Human_Relationship</fullName>
    <active>true</active>
    <description>Relationships between Contacts/Accounts and Animals</description>
    <label>Human Relationship</label>
</RecordType>