force-app/main/default/objects/Animal_Relationship__c/validationRules/Check_that_both_Lookups_are_not_being_us.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_that_both_Lookups_are_not_being_us</fullName>
    <active>true</active>
    <description>Checks that the user has only selected an Account (Organisation) or Contact lookup</description>
    <errorConditionFormula>NOT(
    OR(
       ISBLANK( Contact__c ),
       ISBLANK( Organisation__c )
    )
)</errorConditionFormula>
    <errorMessage>You cannot select both an Organisation and Contact at the same time in a Relationship!</errorMessage>
</ValidationRule>