force-app/main/default/objects/Animal_Relationship__c/listViews/Active_Human_Relationships.listView-meta.xml
<ListView>
    <fullName>Active_Human_Relationships</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>Animal_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Internal_User__c</columns>
    <columns>Name__c</columns>
    <columns>Organisation__c</columns>
    <columns>Relationship_Types__c</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Animal_Relationship__c.Human_Relationship</value>
    </filters>
    <label>Active Human Relationships</label>
</ListView>