force-app/main/default/objects/Animal_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Animal__c</columns>
    <columns>Animal_Name__c</columns>
    <columns>Record_Created__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Related_Animal__c</columns>
    <columns>Related_Animal_Name__c</columns>
    <columns>Relationship_Types__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>